--- a/server/package.json
+++ b/server/package.json
@@ -18,14 +18,22 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/async-exit-hook": "^2.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/chalk": "^0.4.31",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.9",
+    "@types/ms": "^0.7.34",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.8.4",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
     "@types/redis": "^4.0.10",
+    "@types/streamifier": "^0.1.2",
+    "@types/winston": "^2.4.4",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -40,14 +48,6 @@
     "typescript-eslint": "^8.12.2"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/mongoose": "^5.11.96",
-    "@types/ms": "^0.7.34",
-    "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^6.4.16",
-    "@types/streamifier": "^0.1.2",
-    "@types/winston": "^2.4.4",
     "async-exit-hook": "^2.0.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^5.3.0",
@@ -60,7 +60,6 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "inversify": "^6.0.3",
-    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "ms": "^2.1.3",
