--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.3.3
+  faker: ^2.1.0
+  intl: ^0.19.0
+  fluttertoast: ^8.2.8
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
